<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.space.quiz.presentation.views.RectangleView
        android:id="@+id/dialogRectangleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_27dp"
        app:layout_constraintDimensionRatio="1.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rectangleBackgroundColor="@color/yellow_primary" />

    <!--Congrats state-->
    <TextView
        android:id="@+id/congratsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_39dp"
        android:text="@string/congrats_icon_text"
        android:textSize="@dimen/dimen_32sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/dialogRectangleView"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/congratsTextView"
        style="@style/largeMyriadGeo_white_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:drawablePadding="@dimen/dimen_5dp"
        android:text="@string/congratulations_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/dialogRectangleView"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/congratsIcon" />

    <TextView
        android:id="@+id/earnedPointsTextView"
        style="@style/mediumMyriadGeo_lBlue_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/points_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/dialogRectangleView"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/congratsTextView" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginHorizontal="@dimen/dimen_27dp"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:background="@color/neutral_04_white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/closeDialogButton"
        app:layout_constraintEnd_toEndOf="@+id/dialogRectangleView"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView" />

    <TextView
        android:id="@+id/closeDialogButton"
        style="@style/mediumMyriadGeo_white_Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_14dp"
        android:layout_marginBottom="@dimen/dimen_27dp"
        android:text="@string/text_close"
        android:padding="@dimen/dimen_3dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/dialogRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/viewLine"
        app:layout_constraintStart_toStartOf="@+id/viewLine" />

    <!--Exit/Close State-->
    <TextView
        android:id="@+id/exitQuestionTextVIew"
        style="@style/largeMyriadGeo_white_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_39dp"
        android:maxWidth="@dimen/dimen_250dp"
        android:text="@string/dialog_quiz_quit_text"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/dialogRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/dialogRectangleView"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView"
        app:layout_constraintTop_toTopOf="@+id/dialogRectangleView" />

    <TextView
        android:id="@+id/yesTextView"
        style="@style/largeMyriadGeo_darkGrey_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bckg_textview_shape"
        android:padding="@dimen/dimen_3dp"
        android:text="@string/yes_button_text"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/noTextView"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/exitQuestionTextVIew" />

    <TextView
        android:id="@+id/noTextView"
        style="@style/largeMyriadGeo_darkGrey_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bckg_textview_shape"
        android:padding="@dimen/dimen_3dp"
        android:text="@string/no_button_text"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/exitQuestionTextVIew"
        app:layout_constraintTop_toBottomOf="@+id/exitQuestionTextVIew" />
</androidx.constraintlayout.widget.ConstraintLayout>