<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.space.quiz.presentation.views.RectangleView
        android:id="@+id/dialogRectangleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_176dp"
        android:layout_marginHorizontal="@dimen/dimen_50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rectangleBackgroundColor="@color/yellow_primary" />

    <TextView
        android:id="@+id/exitQuestionTextVIew"
        style="@style/largeMyriadGeo_white_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_39dp"
        android:maxWidth="@dimen/dimen_250dp"
        android:text="@string/dialog_quiz_quit_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/dialogRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/dialogRectangleView"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView"
        app:layout_constraintTop_toTopOf="@+id/dialogRectangleView" />

    <com.space.quiz.presentation.views.RectangleView
        android:id="@+id/yesRectangle"
        android:layout_width="@dimen/dimen_106dp"
        android:layout_height="@dimen/dimen_34dp"
        android:layout_marginHorizontal="@dimen/dimen_39dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintStart_toStartOf="@+id/dialogRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/exitQuestionTextVIew"
        app:rectangleBackgroundColor="@color/dialog_button_color" />

    <TextView
        android:id="@+id/yesTextView"
        style="@style/largeMyriadGeo_darkGrey_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/yesRectangle"
        app:layout_constraintEnd_toEndOf="@+id/yesRectangle"
        app:layout_constraintStart_toStartOf="@+id/yesRectangle"
        app:layout_constraintTop_toTopOf="@+id/yesRectangle" />

    <com.space.quiz.presentation.views.RectangleView
        android:id="@+id/noRectangle"
        android:layout_width="@dimen/dimen_106dp"
        android:layout_height="@dimen/dimen_34dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintStart_toEndOf="@+id/yesRectangle"
        app:layout_constraintTop_toBottomOf="@+id/exitQuestionTextVIew"
        app:rectangleBackgroundColor="@color/dialog_button_color" />

    <TextView
        android:id="@+id/noTextView"
        style="@style/mediumMyriadGeo_darkGrey_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/noRectangle"
        app:layout_constraintEnd_toEndOf="@+id/noRectangle"
        app:layout_constraintStart_toStartOf="@+id/noRectangle"
        app:layout_constraintTop_toTopOf="@+id/noRectangle" />

</androidx.constraintlayout.widget.ConstraintLayout>