<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/helloUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:font="@font/myriad_geo"
        android:text="@string/hello_user_text"
        android:textColor="@color/yellow_primary"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.space.quiz.presentation.views.RectangleView
        android:id="@+id/detailsRectangle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_75dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:rectangleBackgroundColor="@color/blue_secondary_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloUserTextView" />

    <com.space.quiz.presentation.views.RectangleView
        android:id="@+id/gpaRectangle"
        android:layout_width="@dimen/dimen_90dp"
        android:layout_height="@dimen/dimen_35dp"
        app:rectangleBackgroundColor="#2CFFFFFF"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailsRectangle"
        app:layout_constraintStart_toStartOf="@+id/detailsRectangle"
        app:layout_constraintTop_toTopOf="@+id/detailsRectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userGPATextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GPA -  4.0"
        android:textColor="@color/neutral_04_white"
        app:layout_constraintBottom_toBottomOf="@+id/gpaRectangle"
        app:layout_constraintEnd_toEndOf="@+id/gpaRectangle"
        app:layout_constraintStart_toStartOf="@+id/gpaRectangle"
        app:layout_constraintTop_toTopOf="@+id/gpaRectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_text"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:textColor="@color/neutral_04_white"
        android:font="@font/myriad_geo"
        android:textSize="@dimen/dimen_12sp"
        android:drawableEnd="@drawable/ic_arrow_white"
        app:layout_constraintBottom_toBottomOf="@+id/detailsRectangle"
        app:layout_constraintEnd_toEndOf="@+id/detailsRectangle"
        app:layout_constraintTop_toTopOf="@+id/detailsRectangle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseSubjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:font="@font/myriad_geo"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/choose_subject_text"
        android:textColor="@color/neutral_01_dark_grey"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsRectangle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subjectsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseSubjectTextView"
        tools:listitem="@layout/quiz_subject_items" />
    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0.8dp"
        android:background="@color/divider_color"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectsRecyclerView" />
    <ImageView
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>